webscaff changelog
==================


v0.2.1 [2020-10-12]
-------------------
* Workaround patchwork issue: invoke.vendor.six.


v0.2.0 [2020-09-20]
-------------------
+ 'cache_init' now just empties cache directory by default.
+ 'info' now prints out current user information.
* Bootstrap spooler directory with right permissions.
* Improved boostrap of Certbot.


v0.1.0 [2020-02-16]
-------------------
+ Basic functionality.