@@ -50,29 +50,35 @@ class TestProj:
             'id -u mydemo',
             'useradd -s /bin/bash mydemo',
             'adduser tstout mydemo',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            "echo '' >> /var/lib/mydemo/bootstrap",
+            'cat /var/lib/mydemo/bootstrap',
             'apt-get update',
             'apt install -y python3-dev python3-pip python3-venv python3-wheel '
             'build-essential libjpeg-dev libxml2-dev libxslt1-dev libpcre3-dev libssl-dev '
             'git postgresql libpq-dev certbot acl mc htop net-tools ncdu',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^apt$" "/var/lib/mydemo/bootstrap"',
             'mkdir -p /srv/mydemo',
             'chown -R mydemo:mydemo /srv/mydemo',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /srv/mydemo',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /srv/mydemo',
             'mkdir -p /var/lib/mydemo',
             'chown -R mydemo:mydemo /var/lib/mydemo',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo',
             'mkdir -p /var/lib/mydemo/dumps',
             'chown -R mydemo:mydemo /var/lib/mydemo/dumps',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/dumps',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/dumps',
             'mkdir -p /var/lib/mydemo/static',
             'chown -R mydemo:mydemo /var/lib/mydemo/static',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/static',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/static',
             'mkdir -p /var/lib/mydemo/media',
             'chown -R mydemo:mydemo /var/lib/mydemo/media',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/media',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/media',
             'rm -rf /var/cache/mydemo*',
             'mkdir -p /var/cache/mydemo',
             'chown -R mydemo:mydemo /var/cache/mydemo',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/cache/mydemo',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/cache/mydemo',
             'test -e "$(echo /var/lib/mydemo/environ)"',
             'test -e "$(echo /var/lib/mydemo/environ)"',
             'egrep "^production$" "/var/lib/mydemo/environ"',
@@ -80,43 +86,73 @@ class TestProj:
             'ln -sf /srv/mydemo ~/mydemo/code',
             'ln -sf /var/lib/mydemo ~/mydemo/state',
             'ln -sf /var/cache/mydemo ~/mydemo/cache',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^paths$" "/var/lib/mydemo/bootstrap"',
             'test -e "$(echo /srv/mydemo/.git)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^git$" "/var/lib/mydemo/bootstrap"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^configs$" "/var/lib/mydemo/bootstrap"',
             'test -e "$(echo /srv/mydemo/venv)"',
             'cd /srv/mydemo',
             'pip3 install -e .',
             'pip3 install  wheel',
             'pip3 install  -r /srv/mydemo/requirements.txt',
             'ln -sf /srv/mydemo/venv/bin/mydemo /usr/bin/mydemo',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^venv$" "/var/lib/mydemo/bootstrap"',
             'pg_config --version',
             'createdb mydemo',
             'createuser mydemo',
             'psql -c "GRANT ALL PRIVILEGES ON DATABASE mydemo TO mydemo"',
             'service postgresql restart',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^pg$" "/var/lib/mydemo/bootstrap"',
             'mkdir -p /var/lib/mydemo/static',
             'chown -R mydemo:mydemo /var/lib/mydemo/static',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/static',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/static',
             'mkdir -p /var/lib/mydemo/media',
             'chown -R mydemo:mydemo /var/lib/mydemo/media',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/media',
-            'ln -sf /srv/mydemo/conf/env_production.py /srv/mydemo/mydemo/settings/env_production.py',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/media',
+            'ln -sf /srv/mydemo/conf/env_production.py '
+            '/srv/mydemo/mydemo/settings/env_production.py',
             'mydemo migrate',
             'mydemo createsuperuser --email idlesign@some.com --username idlesign',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^django$" "/var/lib/mydemo/bootstrap"',
             'touch /var/lib/mydemo/reloader',
             'mkdir -p /var/lib/mydemo/spool',
             'chown -R mydemo:mydemo /var/lib/mydemo/spool',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/spool',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/spool',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^uwsgi$" "/var/lib/mydemo/bootstrap"',
             'systemctl enable --now /srv/mydemo/conf/mydemo.service',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^service$" "/var/lib/mydemo/bootstrap"',
             'mkdir -p /var/lib/mydemo/certbot',
             'chown -R mydemo:mydemo /var/lib/mydemo/certbot',
-            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX" /var/lib/mydemo/certbot',
+            'setfacl -Rm "g:mydemo:rwX,d:g:mydemo:rwX,m:rwx" /var/lib/mydemo/certbot',
             'certbot',
-            'ln -sf /srv/mydemo/conf/mydemo-certbot-hook.sh /etc/letsencrypt/renewal-hooks/deploy/mydemo',
-            'certbot --agree-tos --no-eff-email --email idlesign@some.com certonly --webroot -d mydemo.here -w /var/lib/mydemo/certbot',
+            'ln -sf /srv/mydemo/conf/mydemo-certbot-hook.sh '
+            '/etc/letsencrypt/renewal-hooks/deploy/mydemo',
+            'certbot --agree-tos --no-eff-email --email idlesign@some.com certonly '
+            '--webroot -d mydemo.here -w /var/lib/mydemo/certbot',
             'setfacl -Rm "g:mydemo:--x" /etc/letsencrypt/archive/',
             'setfacl -Rm "g:mydemo:r-x" /etc/letsencrypt/archive/mydemo.here/',
             'setfacl -Rm "g:mydemo:--x" /etc/letsencrypt/live/',
             'setfacl -Rm "g:mydemo:r-x" /etc/letsencrypt/live/mydemo.here/',
-            'shutdown -r now',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'test -e "$(echo /var/lib/mydemo/bootstrap)"',
+            'egrep "^certbot$" "/var/lib/mydemo/bootstrap"',
+            'shutdown -r now'
         ]
 
 
